fixed wrapping in center

--- a/app/ui/gameCenter.module.css
+++ b/app/ui/gameCenter.module.css
@@ -15,4 +15,5 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    flex-wrap: wrap;
 }
